# SkinKit

./: .gitignore  .trigger-ci  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecards.yml  socket.yml
SkinKit/: README.md  __init__.py  bg_painter.py  metadata.txt  qss_highlighter.py  skin_kit.py  skin_kit_dialog.py
SkinKit/builtin_themes/: DarkForest.qss
UIThemesPlus/: README.md  __init__.py  bg_painter.py  metadata.txt  qss_highlighter.py  ui_themes_plus.py  ui_themes_plus_dialog.py
UIThemesPlus/builtin_themes/: OrangeForest.qss
UIThemesPlus/icons/: ui_themes_plus_dialog.py
